# Ai-powerred-sql-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  LCEL_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  llm_agent.py  pyproject.toml  requirements.txt  setup.py  sql_agent.py
tests/: __init__.py  test_config.py
